objects/USA_Survey__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>USA_Briefcase_Admin_Setting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Enter the Briefcase Admin Settings record.  Users that that have access to this Briefcase Admin Settings record will be presented with the questions listed under the Trivia Question Pool.</inlineHelpText>
        <label>USA Briefcase Admin Setting</label>
        <referenceTo>USA_Briefcase_Admin_Settings__c</referenceTo>
        <relationshipLabel>Assigned Trivia Question Pool</relationshipLabel>
        <relationshipName>Briefcase_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Spirits</fullName>
                </value>
                <value>
                    <fullName>Wines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Chain_Mandatory__c</fullName>
        <description>This will allow DW team to identify which objectives we want to include in the reporting, which question in the objective should be used to identify if the program was completed, and also a field to segment mandatory and non mandatory chain objectives.</description>
        <label>Chain Mandatory</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_End_Date__c</fullName>
        <inlineHelpText>Enter the date after which this survey should be removed from Briefcase.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_Execution_Order__c</fullName>
        <inlineHelpText>Indicate the order in which this survey should be executed.</inlineHelpText>
        <label>Execution Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Image_Title_Values__c</fullName>
        <label>Image Title Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Market_Optional__c</fullName>
        <label>Market (Optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Market__c</fullName>
        <label>Market</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Mobile_Available__c</fullName>
        <formula>IF( AND(  USA_Is_Active__c = TRUE,  USA_End_Date__c  &gt;=  TODAY() ) , TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_National_ID_Optional__c</fullName>
        <label>Market Group (Optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_National_ID__c</fullName>
        <label>Market Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Question_Execution__c</fullName>
        <inlineHelpText>Indicate how the questions will be presented to the user.</inlineHelpText>
        <label>Question Execution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Order</fullName>
                    <default>true</default>
                    <label>In Order</label>
                </value>
                <value>
                    <fullName>Random</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Question_Frequency_Hours__c</fullName>
        <formula>IF($User.USA_Stop_Trivia_Questions__c = True, 9999, If($User.USA_Trivia_Question_Frequency_Multiplier__c=0, USA_Set_Question_Frequency_Hours__c,
USA_Set_Question_Frequency_Hours__c/ $User.USA_Trivia_Question_Frequency_Multiplier__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Question Frequency</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Set_Question_Frequency_Hours__c</fullName>
        <inlineHelpText>Enter how often the questions will be presented to the end-user.  Enter 0 if questions are grouped together and should be presented to the end user immediately, one after another.</inlineHelpText>
        <label>Set Question Frequency (Hours)</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Start_Date__c</fullName>
        <inlineHelpText>Enter the date after which this Survey should be available in Briefcase.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_Sub_Tier_Optional__c</fullName>
        <label>Sub Tier (Optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Sub_Tier__c</fullName>
        <label>Sub Tier</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Survey_Frequency__c</fullName>
        <label>Survey Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Survey_Report_Flag__c</fullName>
        <inlineHelpText>This will allow DW team to identify which objectives we want to include in the reporting, which question in the objective should be used to identify if the program was completed, and also a field to segment mandatory and non mandatory chain objectives.</inlineHelpText>
        <label>Survey Report Flag</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Survey_Status__c</fullName>
        <inlineHelpText>In Development - Only Survey authors can view the survey on their iPad.  
Deployed- All users can view the Survey according to the Start and End Dates.</inlineHelpText>
        <label>Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Survey_Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Survey Objective</fullName>
                </value>
                <value>
                    <fullName>Survey Tab</fullName>
                </value>
                <value>
                    <fullName>Workflow Question Pool</fullName>
                </value>
                <value>
                    <fullName>Trivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_TD_Linx_ID_Optional__c</fullName>
        <label>TD Linx ID (Optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_TD_Linx_ID__c</fullName>
        <label>TD Linx ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Tags_Optional__c</fullName>
        <label>Tags (Optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Tier_Optional__c</fullName>
        <label>Tier (Optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Tier__c</fullName>
        <inlineHelpText>Add the Tiers on which this Survey should be accessible separated by semicolons (e.g. Off-Premise A; Off-Premise B etc.).</inlineHelpText>
        <label>Tier</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Wines_Sub_Tier_Optional__c</fullName>
        <label>Wines Sub Tier (Optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Wines_Sub_Tier__c</fullName>
        <label>Wines Sub Tier</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Wines_Tier_Optional__c</fullName>
        <label>Wines Tier (Optional)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Wines_Tier__c</fullName>
        <label>Wines Tier</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_X10_Day_Window_End__c</fullName>
        <inlineHelpText>Enter the end date by which to measure responses within 10-day window.</inlineHelpText>
        <label>10 Day Window End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USA_X5_Day_Window_End__c</fullName>
        <inlineHelpText>Enter the end date by which to measure responses within 5-day window.</inlineHelpText>
        <label>5 Day Window End</label>
        <type>Date</type>
    </fields>
    <label>Briefcase Survey</label>
    <listViews>
        <fullName>All_Briefcase_Survey_Objectives</fullName>
        <columns>NAME</columns>
        <columns>USA_Survey_Type__c</columns>
        <columns>USA_Start_Date__c</columns>
        <columns>USA_End_Date__c</columns>
        <columns>USA_Market__c</columns>
        <columns>USA_National_ID__c</columns>
        <columns>USA_Tier__c</columns>
        <columns>USA_Sub_Tier__c</columns>
        <columns>USA_Survey_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>USA_Survey_Type__c</field>
            <operation>equals</operation>
            <value>Survey Objective</value>
        </filters>
        <label>All Briefcase Survey Objectives</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Briefcase_Survey_Tabs</fullName>
        <columns>NAME</columns>
        <columns>USA_Survey_Type__c</columns>
        <columns>USA_Start_Date__c</columns>
        <columns>USA_End_Date__c</columns>
        <columns>USA_Sort_Order__c</columns>
        <columns>USA_Tier__c</columns>
        <columns>USA_National_ID__c</columns>
        <columns>USA_Market__c</columns>
        <columns>USA_Is_Active__c</columns>
        <columns>USA_Mobile_Available__c</columns>
        <columns>USA_High_Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>USA_Survey_Type__c</field>
            <operation>equals</operation>
            <value>Survey Tab</value>
        </filters>
        <label>All Briefcase Survey Tabs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Briefcase Surveys</pluralLabel>
    <recordTypes>
        <fullName>USA_Surveys_and_Objectives</fullName>
        <active>true</active>
        <label>Surveys and Objectives</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_Trivia</fullName>
        <active>true</active>
        <label>Trivia</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_Survey_Status_Edit</fullName>
        <active>true</active>
        <description>Prevent changing of the Survey Status from &quot;Deployed&quot; to &quot;In Development&quot;.</description>
        <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED(USA_Survey_Status__c),
 ISPICKVAL( USA_Survey_Status__c , &quot;In Development&quot;)
)</errorConditionFormula>
        <errorDisplayField>USA_Survey_Status__c</errorDisplayField>
        <errorMessage>Can not change a survey to &quot;In Development&quot; once it has been Deployed to Briefcase.</errorMessage>
    </validationRules>
</CustomObject>